<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundDark">

    <EditText
        android:id="@+id/search_news_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_editText_hint"
        android:textColorHint="@color/textPrimaryLight"
        android:backgroundTint="#9bdc3e"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    
    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimaryDark"
        android:background="@color/foregroundLight"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/categories_gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:columnCount="3"
            android:useDefaultMargins="true"
            android:paddingTop="16dp"
            android:layout_below="@id/categories_gridLayout">

            <Button
                android:id="@+id/technology_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_tech"
                android:tag="@string/category_tech_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/science_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_science"
                android:tag="@string/category_science_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/health_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_health"
                android:tag="@string/category_health_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/weather_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_weather"
                android:tag="@string/category_weather_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/politics_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_politics"
                android:tag="@string/category_politics_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/business_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_business"
                android:tag="@string/category_business_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/sports_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_sports"
                android:tag="@string/category_sports_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/entertainment_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_entertainment"
                android:tag="@string/category_entertainment_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>

            <Button
                android:id="@+id/world_button"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:text="@string/category_world"
                android:tag="@string/category_world_tag"
                android:textColor="@color/textPrimaryLight"
                android:backgroundTint="@color/foregroundDark"/>
        </GridLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#9bdc3e"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>